--- a/ct_catering.html
+++ b/ct_catering.html
@@ -8,7 +8,7 @@
     Tutorial Case
     
     Curbside Thai Catering Page
-    Author: Diana Linville
+    Author: Diana
     Date:   9-9-25
 
     Filename: ct_catering.html
